--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
   <title>Learn-CSS</title><link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
-  <div class="vertical-text">
-    <h1>Salom Dunyo!</h1>
-  </div>
-  <p></p>
-
+  <header>
+    <div class="container">
+      <h1>Javoxir-Media</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Misol</a></li>
+          <li><a href="#">Uchun</a></li>
+          <li><a href="#">IIIII</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
   <script src="/JS/script.js"></script>
 </body>
 </html>
