site layout created

--- a/index.html
+++ b/index.html
@@ -9,16 +9,65 @@
 <body>
   <header>
     <div class="container">
-      <h1>Javoxir-Media</h1>
-      <nav>
-        <ul>
-          <li><a href="#">Misol</a></li>
-          <li><a href="#">Uchun</a></li>
-          <li><a href="#">IIIII</a></li>
-        </ul>
-      </nav>
+      <div class="h1-title">
+        <h1><a href="/index.html">Javoxir-Media</a></h1>
+      </div>
+      <div class="navbar-list">
+          <ul>
+            <li><a href="#">Misol</a></li>
+            <li><a href="#">Uchun</a></li>
+            <li><a href="#">IIIII</a></li>
+          </ul>
+      </div>
     </div>
   </header>
+  <section>
+    <div class="container">
+      <div class="aside">
+        <div class="container">
+          <div class="h2-title">
+            <h2>List of fruits</h2>
+          </div>
+          <div class="fruits-list">
+            <ul>
+              <li><a href="#">Apple</a></li>
+              <li><a href="#">Banana</a></li>
+              <li><a href="#">Cherry</a></li>
+              <li><a href="#">Pineapple</a></li>
+              <li><a href="#">Peach</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="main">
+        <div class="container"></div>
+      </div>
+      <div class="right-side">
+        <div class="container"></div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      Created by Javoxir
+    </div>
+  </footer>
+  <div class="line">
+    <div class="box box-1"></div>
+    <div class="box box-2"></div>
+    <div class="box box-3"></div>
+  </div>
+  <div class="shablon">
+    <div class="quti">
+      <div class="quti-bir quti-header">Header</div>
+      <div class="jam">
+        <div class="quti-bir quti-nav uxa">Nav</div>
+        <div class="quti-bir quti-section uxa">Section</div>
+        <div class="quti-bir quti-aside uxa">Aside</div>
+      </div>
+      <div class="quti-footer">Footer</div>
+    </div>
+  </div>
   <script src="/JS/script.js"></script>
 </body>
 </html>
